# DirStatsTUI

./: AppUI.hpp  CMakeLists.txt  README.md
DerivedData/DirStatTui/: info.plist
DerivedData/DirStatTui/Index.noindex/: build-description.json
DerivedData/DirStatTui/Index.noindex/DataStore/v5/units/: main.o-1B56R4YEI9ZRU
DerivedData/DirStatTui/Index.noindex/UniDB/DirStatTui.xcindex/v13/p14704--929ddb/: lock.mdb
DerivedData/DirStatTui/TextIndex/: TextFragmentIndex-v8.idx
DerivedData/ModuleCache.noindex/: Session.modulevalidation
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Auxiliary/Observation/: main.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Auxiliary/Swift/: main.plist  metadata.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Auxiliary/_Concurrency/: main.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Auxiliary/_StringProcessing/: main.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/CFNetwork/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/Combine/: swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/CoreFoundation/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/CoreGraphics/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/CoreServices/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/Foundation/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/IOKit/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/Frameworks/Security/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/Darwin/: main.plist  metadata.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/Dispatch/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/MachO/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/ObjectiveC/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/XPC/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/launch/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/libDER/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/libkern/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/os/: main.plist  swift-imported.plist  swift-overlay.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/os_availability/: main.plist  metadata.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/os_object/: main.plist  swift-imported.plist
DerivedData/SymbolCache.noindex/MacOSX14.5.sdk (23F73)/usr-include/os_workgroup/: main.plist  swift-imported.plist
DirStatTui/: main.cpp
DirStatTui.xcodeproj/: project.pbxproj
DirStatTui.xcodeproj/project.xcworkspace/xcuserdata/marc.xcuserdatad/: UserInterfaceState.xcuserstate
DirStatTui.xcodeproj/xcuserdata/marc.xcuserdatad/xcschemes/: xcschememanagement.plist
cmake additional/: DirStatsTUIVersion.hpp.cmake  ProjectVersion.hpp.cmake
include/: App.hpp  AppUI.hpp  CLI11.hpp  DirStatsTUIVersion.hpp  Error.hpp  FileSystem.hpp  Main.hpp  MenuComponent.hpp  MessageBox.hpp  PlatformMacros.hpp
src/: App.cpp  AppUI.cpp  Error.cpp  FileSystem.cpp  Main.cpp  MenuComponent.cpp  MessageBox.cpp
